[package]
name = "$name_kebab_case$"
version = "$version$"
authors = ["$param.author_name$ <$param.author_email_lower_case$>"]
edition = "2018"
description = "$param.desc$"

[features]
default = ["with-serde"]
with-serde = []
with-test = []

[dependencies]
actix-web = "0.7"
chrono = { version = "0.4", features = ["serde"]}
futures = "0.1"
failure = "=0.1.5"
log = "0.4"
env_logger = "0.6"
lazy_static = "1.2"
rsnowflake = "0.1"

# <% if param.password_crypt_algo == "bcrypt" %>
bcrypt = "0.3"
# <% endif %>

# ---- crypto deps -----
ed25519-dalek = "=0.9.1"
sha2 = "0.8"

byteorder = "1.3"
hex = "0.3"
regex = "1"
rand = "0.6"

# --- serde deps -----
serde = "1.0.10"
serde_derive = "1.0.64"
serde_json = "1.0.19"

protobuf = { version = "2.2.5", features = ["with-serde"] }

diesel = { version = "=1.4.1", default-features = false, features = ["32-column-tables", "postgres", "chrono"]}
dotenv = "0.13"

$name_kebab_case$-proc-macro = { path = "./macros/$name_snake_case$_proc_macro" }

[dev-dependencies]
$name_kebab_case$-testkit = { version = "0.1.0", path = "./testkit" }

[build-dependencies]
protoc-rust = "2.0"
chrono = { version = "0.4" }
