[package]
name = "$name_kebab_case$-proc-macro"
version = "0.1.0"
authors = ["$param.author_name$ <$param.author_email_lower_case$>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
syn = "0.15"
quote = "0.6"
lazy_static = "1.2"
serde = "1.0.10"
serde_derive = "1.0.64"
serde_json = "1.0.19"
heck = "0.3.1"
